# webdrop

./: .gitignore  Cargo.toml  README.md  index.html  manifest.json
scripts/: app.js  name.js  streamsaver.js  uuid.js  web-streams-polyfill.js
src/: helia.rs  main.rs
src/components/: file_input.rs  file_progress.rs  mod.rs
