[package]
name = "webdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
humansize = "2.1.3"
leptos = { version = "0.6.12", features = ["csr", "nightly"] }
leptos-use = "0.10.10"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["Blob", "File", "FileList", "HtmlInputElement"] }
